# cyberwheel

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  attack_generator.py  campaign_info.yaml  cyberwheel.py  cyberwheel_multiagent.py  cyberwheel_singleagent.py  main.py  main_multiagent.py  network-cac9fa081e8a4edd856345da364c79b3.yaml  network.py  pyproject.toml  redagent.py  requirements.txt
blueagents/: observation.py
cyberwheel/: .pre-commit-config.yaml  __init__.py  __main__.py  app.py  evaluate_cyberwheel.py  evaluate_pretrained_steps.py  main_multiagent.py  ppo_cyberwheel.py  run.sh  run_performance_experiments.py  run_visualization_server.py  testing.py  train_cyberwheel.py  visualize.py
cyberwheel/action_logs/: README.md
cyberwheel/blue_actions/: __init__.py  blue_action.py  blue_base.py  decoy_helpers.py  dynamic_blue_base.py  shared_data.py
cyberwheel/blue_agents/: __init__.py  blue_agent.py  blue_agent_base.py  decoy_blue.py  dynamic_blue_agent.py  isolate_blue.py  observation.py  (+2 more)
cyberwheel_envs/: cyberwheel.py
detectors/: alert.py  detector.py  test_alert.py
network/: __init__.py  config.yaml  example_config.yaml  host.py  network_base.py  network_object.py  network_random.py  router.py  service.py  subnet.py
pyattck/: merged_pre_attck_v1.json
red_actions/: AtomicTest.py  Technique.py  art_techniques.py  red_base.py  state_diff.py  techniques.py  testing.py
redagents/: longestpath.py  random.py  redbase.py  shortestpath.py
tests/: test_alert.py  test_pipeline.py  test_red_action.py  test_state_diff.py
(+223 files in other folders)
