[tool.poetry]
name = "cyberwheel"
version = "0.1.0"
description = "A simulation environment for training autonomous cyber defense agents based on the Mitre Att&ck framework."
authors = ["Sean Oesch <oeschts@ornl.gov>", "Cory Watson <watsoncl1@ornl.gov>", "Amul Chaulagain <chaulagaina@ornl.gov>", "Matthew Dixson <dixsonmk@ornl.gov>", "Brian Weber <weberb@ornl.gov>"]
license = "TBD"
readme = "README.md"
classifiers = ["Private :: Do not Upload"]

[tool.poetry.dependencies]
python = "~3.10"
networkx = "^3.2.1"
ipaddress = "^1.0.23"
stable-baselines3 = "^2.2.1"
pettingzoo = "^1.24.3"
ray = {extras = ["rllib"], version = "^2.9.2"}
pydantic = "^1"
jsonpickle = "^3.0.3"
wandb = "^0.16.5"
gym = "^0.26.2"
tensorboard = "^2.16.2"
tqdm = "^4.66.2"
ipykernel = "^6.29.4"
pygraphviz = "^1.13"
dash = "^2.17.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pre-commit = "^3.6.2"
pyright = "^1.1.351"
py-spy = "^0.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ['cyberwheel']

[tool.setuptools.package-data]
cyberwheel = ['*.json', '*.yaml', '*.yml']
